# option-screener-poc

./: .env.example  .gitignore  Procfile  cron.py  main.py  pyproject.toml  requirements.txt  vercel.json
api/: index.py
app/: backup.py  config.py  db.py  orchestrator.py  resolution.py  scoring.py  server.py
app/data/: sp500.json
app/engine/: ev_calculator.py  market_risk.py  options_screener.py  pipeline.py  risk_filter.py  safety_score.py  technicals.py  universe.py
app/models/: market.py  option.py  report.py  safety.py  stock.py
app/providers/: base.py  news.py  yahoo.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ActiveTradesTable.tsx  AppHeader.tsx  CapitalSettings.tsx  ControlBar.tsx  FilterPanel.tsx  Legend.tsx  MethodologyPanel.tsx  POPBar.tsx  ResolvedTradesTable.tsx  RiskDashboard.tsx  SafetyBar.tsx  StatusFilter.tsx  SummaryCards.tsx  Tooltip.tsx  TradeDetail.tsx  TradeRow.tsx  TradeTable.tsx
frontend/src/hooks/: useTrades.ts
frontend/src/pages/: ReportPage.tsx  ScreenerPage.tsx
frontend/src/test/: ReportPage.test.tsx  setup.ts
public/: index.html
public/assets/: index-DKiyMUm3.css  index-DgSACvTr.js  index-fXJkx-vQ.js
scripts/: seed_qa_data.py
tests/: conftest.py  test_backup.py  test_db.py  test_ev_calculator.py  test_options_screener.py  test_orchestrator.py  test_report_api.py  test_resolution.py  test_risk_filter.py  test_safety_score.py  test_scoring.py  test_technicals.py  test_universe.py
(+1 files in other folders)
